--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <body>
+    <h1>Send any feature requests or issues to radiowebsupport@protonmail.com</h1>
     <p>
         Privacy Policy<br>
 
         Effective Date: Tuesday, April 15, 2025<br>
-        App Name: RadioWeb<br>
+        App Name: MyRadioWaves<br>
         Developer: Blaise Bennett<br>
 
         I respect your privacy. This app does not collect, store, or share any personal information. No data is collected—about you, your device, or how you use the app.<br>
