--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <p>
         Privacy Policy<br>
 
-        Effective Date: Tuesday, April 15, 2025<br>
-        App Name: MyRadioWaves<br>
+        Effective Date: May 11, 2025<br>
+        App Name: Sceduly<br>
         Developer: Blaise Bennett<br>
 
         I respect your privacy. This app does not collect, store, or share any personal information. No data is collected—about you, your device, or how you use the app.<br>
